unpackaged/main/default/objects/User/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <formula>CASE(
UserRole.DeveloperName,
'Manager_Aiden_s_Team',
'emc2@emcfinancial.com',
'Sales_Reps_Aiden_s_Team',
'emc2@emcfinancial.com',
'admin@emcfinancial.com'
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Email</label>
    <type>Text</type>
</CustomField>