unpackaged/main/default/objects/User/fields/Is_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sales Rep</label>
    <type>Checkbox</type>
</CustomField>