unpackaged/main/default/objects/User/fields/User_External_Id__c.field-meta.xml
<CustomField>
    <fullName>User_External_Id__c</fullName>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>User External Id</label>
    <type>AutoNumber</type>
</CustomField>