unpackaged/main/default/objects/User/fields/User_One__c.field-meta.xml
<CustomField>
    <fullName>User_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>